deploy/k8s/overlays/dev/patches.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce
spec:
  tls:
    - hosts:
        - e-shope.me
      secretName: ecommerce-dev-tls
  rules:
    - host: e-shope.me
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
